--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,5 +1,5 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#929ca3'
-gradient_color_2 = '#717C82'
+gradient_color_1 = '#a79e9c'
+gradient_color_2 = '#A06A68'
