--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "kitty-direct",
-    "source": "/home/rionzaphkiel/.config/fastfetch/logo/john_wuthering.png",
+    "source": "/home/rionzaphkiel/.config/fastfetch/logo/john_arknights.png",
     "padding": {
       "top": 1,
       "left": 2
@@ -52,7 +52,7 @@
     {
       "type": "command",
       "key": "wife  ",
-      "format": "Artoria Pendragon",
+      "format": "Wiš'adel",
       "keyColor": "white"
     }
   ]
